# rust-playground-api

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  asm-gist.sh  asm.sh  build-gist.sh  build.sh  deps.sh  gist.sh  prod.sh  push.sh  run-gist.sh  run.sh  serve.sh  start.sh  stop.sh  test-gist.sh  test.sh  wasm-gist.sh  wasm.sh
.github/workflows/: rust.yml
src/: main.rs
src/example1/: main.rs
