[package]
name = "rust-playground-api"
version = "0.1.0"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example1"
path = "src/example1/main.rs"

[dependencies]
