# NOTE: External depends on cargo-watch. See 
# comment in [dependencies] section below.

[package]
name = "rust-playground-api"
version = "0.1.0"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example1"
path = "src/example1/main.rs"

[dependencies]
# Run this once first: cargo install cargo-watch
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
